--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b main -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://karnikkanojia.github.io/Portfolio"
+  "homepage": "http://karnikkanojia.github.io/"
 }
