--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://karnikkanojia.github.io/"
+  "homepage": "http://karnikkanojia.github.io/Portfolio"
 }
