Change homepage in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://karnikkanojia.github.io/my-app",
+  "homepage": "http://karnikkanojia.github.io/portfolio",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
