--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lint": "next lint",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d .next"
   },
   "eslintConfig": {
     "extends": [
